cabal-version:      3.14
name:               musicjukebox
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

author:             gKrokod
category:           Sound
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common common-extensions
  default-language: GHC2024
  default-extensions:
      OverloadedStrings
      DeriveGeneric
      OverloadedRecordDot
      DeriveAnyClass
      LambdaCase
      TypeApplications
      BangPatterns
      DataKinds
      GADTs
      CPP
common warnings
  ghc-options: -Wall -threaded
library 
    import:
        warnings
      , common-extensions
    hs-source-dirs: src
    exposed-modules:
      Handlers.Engine
      Handlers.Logger
      Hotkey.Types
      Hotkey.Grab
      Engine
      Logger
    build-depends: 
      aeson
      , base
      , text
      , time
      , directory
      , process
      , filepath
      , time
      , monatone
      , containers
      , bytestring
      , stm
      , async

 if os(windows)
    other-modules:
        Hotkey.Windows
    build-depends:
        Win32
 else
    other-modules:
        Hotkey.Ubuntu
    build-depends:
        X11


executable musicjukebox-exe
    import:
      warnings
      , common-extensions
    main-is:          Main.hs
    build-depends:    
      base
      , musicjukebox
      ,bytestring
      , directory
      , process
      , filepath
      , monatone
      , text
      , time
      , stm
      , async
    -- Directories containing source files.
    hs-source-dirs:   app

    
benchmark musicjukebox
    -- Import common warning flags.
    import:
      warnings
      , common-extensions
    hs-source-dirs: bench
    main-is:    JukeBench.hs
    build-depends:    base
